force-app/main/default/objects/SIS_Skills_Family_Assignments__c/SIS_Skills_Family_Assignments__c.object-meta.xml
<CustomObject>
    <label>Attribution de famille de compétence</label>
    <nameField>
        <displayFormat>AFC-{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attributions de famille de compétence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>