force-app/main/default/objects/SIS_Skills_Family_Assignments__c/fields/SIS_Academic_Certification__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Certification</label>
    <referenceTo>hed__Academic_Certification__c</referenceTo>
    <relationshipName>Skills_family_attributions</relationshipName>
    <type>Lookup</type>
</CustomField>