force-app/main/default/objects/SIS_Skills_Family_Assignments__c/fields/SIS_Description_EN__c.field-meta.xml
<CustomField>
    <fullName>SIS_Description_EN__c</fullName>
    <formula>SIS_Skills_Family__r.SIS_Description_EN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description EN</label>
    <type>Text</type>
</CustomField>