force-app/main/default/objects/SIS_Skills_Family_Assignments__c/fields/SIS_Program__c.field-meta.xml
<CustomField>
    <fullName>SIS_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Skills Families</relationshipLabel>
    <relationshipName>Skills_Family_Assignement</relationshipName>
    <type>Lookup</type>
</CustomField>