force-app/main/default/objects/SIS_Skills_Family_Assignments__c/fields/SIS_Skills_Family__c.field-meta.xml
<CustomField>
    <fullName>SIS_Skills_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skills Family</label>
    <referenceTo>SIS_Skills_Family__c</referenceTo>
    <relationshipName>Skills_family_attributions</relationshipName>
    <type>Lookup</type>
</CustomField>