force-app/main/default/objects/SIS_Skills_Family_Assignments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SIS_Program__c</columns>
    <columns>SIS_Academic_Certification__c</columns>
    <columns>SIS_Description_FR__c</columns>
    <columns>SIS_Description_EN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>